# chessrs

./: .gitignore  Cargo.toml  README.md  old_code.txt
old/: inverse_moves.rs
src/: coords.rs  input.rs  lib.rs  main.rs  position.rs
src/eval/: mod.rs
src/game/: checks.rs  default.rs  index_extensions.rs  mod.rs
src/moves/: mod.rs
src/piece/: bin_move.rs  direct_move_lists.rs  inverse_moves.rs  mod.rs  move_lists.rs  moves.rs  piece_move.rs
src/tests/: mod.rs
