[package]
name = "chessrs"
version = "0.1.0"
authors = ["hecksmosis <hecksmosis@gmail.com>"]
license = "MIT"
description = "A command line implementation for the game of chess"
readme = "README.md"
homepage = "https://github.com/hecksmosis/chessrs"
repository = "https://github.com/hecksmosis/chessrs"
keywords = ["chess", "game", "chessrs"]
edition = "2021"
